# povray

./: .gitattributes  .gitignore  .travis.yml  README.md  appveyor.yml  changes.txt  engine3d_linux.tgz  revision.txt
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/book/: Makefile  Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/demos/: Makefile  Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/ggi/demos/: Makefile  Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/ggi/demos/CVS/: Entries  Repository
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/samples/: Makefile  Makefile.DJ  Makefile.am  Makefile.dja  Makefile.in
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/src-glut/: Makefile  Makefile.am  Makefile.fx  Makefile.in
dos/povlab/src/dos_wat/mesa3d/Mesa-5.0/xdemos/: Makefile  Makefile.am  Makefile.in  vindex.c  vtest.c
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/: Makefile.DJ  Makefile.am  Makefile.in  Makefile.ugl  Makefile.win  acconfig.h  acinclude.m4  aclocal.m4  common_rules.make  conf.h.in  configure  configure.in  descrip.mms  mesawin32.mak  mms-config
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/BeOS/: demo.cpp
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/docs/: CONFORM  COPYRIGHT  DEVINFO  INSTALL  README
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/include/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/include/GL/: Makefile.in  mglmesa.h  xmesa_x.h  xmesa_xf86.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/m4/: assembler.m4  dllext.m4  extrapaths.m4  libtool.m4  md_flag.m4
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/si-glu/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/si-glu/include/: Makefile.am  Makefile.in  gluos.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/si-glu/libnurbs/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/si-glu/libtess/: Makefile.am  Makefile.in  README  alg-outline  dict-list.h  dict.c  dict.h  geom.c  geom.h  libtess_la_SOURCES  memalloc.c  memalloc.h  mesh.c  mesh.h  normal.c  normal.h  priorityq-heap.c  priorityq-heap.h  priorityq-sort.h  priorityq.c  priorityq.h  render.c  render.h  sweep.c  sweep.h  tess.c  tess.h  tessmono.c  tessmono.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/si-glu/libutil/: Makefile.am  Makefile.in  error.c  glue.c  gluint.h  libutil_la_SOURCES  mipmap.c  project.c  quad.c  registry.c
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/: Makefile  Makefile.am  Makefile.in  depend  get.c  libGL_la_SOURCES  mmath.c  mmath.h  vpexec.c  vpexec.h  vpparse.c  vpparse.h  vpstate.c  vpstate.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src-glu/: Makefile  Makefile.am  Makefile.fx  Makefile.in  fxglu.def
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/BeOS/: GLView.cpp
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/DOS/: video.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/FX/: Makefile.am  Makefile.in  libMesaFX_la_SOURCES
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/GGI/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/OSmesa/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/SPARC/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/SVGA/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/Trace/: Makefile.am  Makefile.in  tr_commands.h  tr_context.c  tr_context.h  tr_control.c  tr_error.c  tr_error.h  tr_support.c  tr_support.h  tr_wrapper.c  tr_wrapper.h  tr_write.c  tr_write.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/X/: Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/X86/: Makefile.am  Makefile.in  matypes.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/array_cache/: Makefile  Makefile.am  Makefile.in  libMesaAC_la_SOURCES
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/math/: Makefile  Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/swrast/: Makefile  Makefile.am  Makefile.in  libMesaSwrast_la_SOURCES  s_histogram.c  s_histogram.h
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/swrast_setup/: Makefile  Makefile.am  Makefile.in
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/tnl/: Makefile  Makefile.am  Makefile.in  libMesaTnl_la_SOURCES
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/src/windml/: ugl_api.c  ugl_dd.c  (+5 more)
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/util/: Makefile.am  Makefile.in  README  glstate.c  glstate.h  glutskel.c  sampleMakefile
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/vms/: xlib_share.opt
dos/povlab/src/dos_wat/mesa3d/mesalib/Mesa-5.0/widgets-mesa/: ChangeLog  INSTALL  Makefile.in  README  TODO  configure  configure.in
unix/: AUTHORS  COPYING  ChangeLog  Makefile.header  NEWS  README  README.md  README.unix  VERSION  configure.ac  dirinfo.dox  disp.h  disp_sdl.cpp  disp_sdl.h  disp_sdl2.cpp  disp_sdl2.h  disp_text.cpp  disp_text.h  disp_x11.cpp  disp_x11.h  install  install.txt  povray.1  povray.conf  prebuild.sh  xbgmap.xpm  xpovicon.xbm  xpovicon.xpm  xpovmask.xbm
unix/config/: acx_pthread.m4  ax_arg_enable.m4  ax_arg_with.m4  ax_boost_base.m4  ax_boost_thread.m4  ax_check_lib.m4  ax_check_libfreetype.m4  ax_check_libjpeg.m4  ax_check_libsdl.m4  ax_check_libsdl2.m4  ax_check_libtiff.m4  ax_check_openexr.m4  ax_compare_version.m4  ax_compiler_vendor.m4  ax_compiler_version.m4  ax_fix_incorrect_path.m4  ax_prog_ld_static.m4  ax_test_compiler_flags.m4  ax_x86_arch.m4
unix/icons/source/: Makefile  icon.pov
unix/povconfig/: dirinfo.dox  syspovconfig.h  syspovconfig_bsd.h  syspovconfig_gnu.h  syspovconfig_osx.h  syspovconfig_posix.h  syspovconfigbackend.h  syspovconfigbase.h  syspovconfigcore.h  syspovconfigfrontend.h  syspovconfigparser.h  syspovconfigpovms.h  syspovconfigvm.h
unix/prebuild/: AUTHORS  ChangeLog  INSTALL  README  VERSION  configure.ac  dirinfo.dox  povray.conf
unix/scripts/: allanim.sh  allscene.sh  portfolio.sh  render_anim.sh  render_scene.sh  rerunpov.sh  runpov.sh
(+4834 files in other folders)
